# timekeeper-mcp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DEPLOY.md  LICENSE  README.md  pyproject.toml
deploy/: nginx.conf.example  timekeeper-mcp.service.example
tests/: test_core.py  test_formatting.py  test_http_integration.py  test_server.py
timekeeper/: __init__.py  __main__.py  core.py  formatting.py  server.py
