[project]
name = "timekeeper-mcp"
version = "0.1.0"
description = "An MCP server providing authoritative current-time tools for AI agents."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Alexander Nyczkowski" }
]
keywords = ["mcp", "model-context-protocol", "time", "timezone", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "mcp[cli]>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-cov>=5.0,<6.0",
]

[project.urls]
Homepage = "https://github.com/codeiosaur/timekeeper-mcp"
Issues = "https://github.com/codeiosaur/timekeeper-mcp/issues"

[project.scripts]
timekeeper-mcp = "timekeeper.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["timekeeper"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
